tests/fixtures/invalid/set_bitor_float.py
# Cannot bitwise OR Set[int] and Float
x: float = {1, 2, 3} | 1.0
